--- a/config.ini
+++ b/config.ini
@@ -12,8 +12,7 @@ biasT          = Off
 gwID           = 1
 
 [network]
-#gwIPaddress    = 208.109.36.130
-gwIPaddress    = 132.148.72.222
+gwIPaddress    = xxx.xxx.xxx.xxx
 gwPort         = 8081
 gwFTPport      = 8082
 
